fix padding misalign

--- a/style.css
+++ b/style.css
@@ -18,6 +18,7 @@ body {
 }
 
 html {
+	-webkit-text-size-adjust: 100%;
 	scrollbar-color: #999 #DDD;
 }
 
